--- a/CharacterManager.WebMVC/Views/Character/Delete.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CharacterDelete</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,7 +21,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CharacterRace)
+            @{ var race = Model.CharacterRace.GetDisplayName(); }
+            @Html.DisplayFor(model => race)
         </dd>
 
         <dt>
