--- a/CharacterManager.WebMVC/Content/Site.css
+++ b/CharacterManager.WebMVC/Content/Site.css
@@ -84,6 +84,10 @@ textarea {
     font-size: 1.4em;
 }
 
+.class-icon {
+    max-height: 150px;
+}
+
 #features {
     text-align: center;
     margin-bottom: 2%;
@@ -106,25 +110,10 @@ textarea {
 }
 
 .character-card {
-    background-color: #F5F1ED;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.6);
-    padding: 5px;
-    margin-bottom: 3%;
-    color: #654C4F;
+    max-height: 450px;
+    padding: 0 3% 3% 3%;
 }
 
 .character-card a {
     color: #B26E63;
-}
-
-.character-card h2 {
-    text-align: center;
-}
-
-.character-card h4 {
-    text-align: center;
-}
-
-.character-card p {
-    display: inline;
 }
